# solar_system

./: CMakeLists.txt  README.md  README_zh.md  report.md  report_zh.md
include/: stb_image.h  text_renderer.h
shaders/: fragment.glsl  text_vertex.glsl  trail_fragment.glsl  trail_vertex.glsl  vertex.glsl
src/: main.cpp  stb_image_impl.cpp  text_renderer.cpp
